parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAMA declara bloco FIMPROG
Rule 2     declara -> DECLARE_INT lista_ids DOT
Rule 3     declara -> DECLARE_FLOAT lista_ids DOT
Rule 4     declara -> DECLARE_TEXTO lista_ids DOT
Rule 5     lista_ids -> ID
Rule 6     lista_ids -> lista_ids COMMA ID
Rule 7     bloco -> comando
Rule 8     bloco -> bloco comando
Rule 9     comando -> cmd_leitura
Rule 10    comando -> cmd_escrita
Rule 11    comando -> cmd_if
Rule 12    comando -> cmd_expr
Rule 13    comando -> cmd_while
Rule 14    comando -> cmd_break
Rule 15    comando -> cmd_do_while
Rule 16    comando -> declara
Rule 17    cmd_leitura -> LEIA LPAREN ID RPAREN DOT
Rule 18    cmd_escrita -> ESCREVA LPAREN TEXT RPAREN DOT
Rule 19    cmd_escrita -> ESCREVA LPAREN ID RPAREN DOT
Rule 20    cmd_expr -> ID ASSIGN expr DOT
Rule 21    cmd_expr -> ID ASSIGN ASPAS ID ASPAS DOT
Rule 22    cmd_if -> IF LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE
Rule 23    cmd_if -> IF LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE ELSE LBRACE bloco RBRACE
Rule 24    cmd_while -> WHILE LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE
Rule 25    cmd_while -> WHILE LPAREN NUM RPAREN LBRACE bloco RBRACE
Rule 26    cmd_while -> WHILE LPAREN TRUE RPAREN LBRACE bloco RBRACE
Rule 27    cmd_while -> WHILE LPAREN FALSE RPAREN LBRACE bloco RBRACE
Rule 28    cmd_do_while -> DO LBRACE bloco RBRACE WHILE LPAREN expr op_rel expr RPAREN DOT
Rule 29    cmd_do_while -> DO LBRACE bloco RBRACE WHILE LPAREN NUM RPAREN DOT
Rule 30    cmd_do_while -> DO LBRACE bloco RBRACE WHILE LPAREN TRUE RPAREN DOT
Rule 31    cmd_do_while -> DO LBRACE bloco RBRACE WHILE LPAREN FALSE RPAREN DOT
Rule 32    cmd_break -> BREAK DOT
Rule 33    op_rel -> LT
Rule 34    op_rel -> GT
Rule 35    op_rel -> LE
Rule 36    op_rel -> GE
Rule 37    op_rel -> NE
Rule 38    op_rel -> EQ
Rule 39    op_rel -> AND
Rule 40    op_rel -> OR
Rule 41    op_rel -> NOT
Rule 42    expr -> expr PLUS termo
Rule 43    expr -> expr MINUS termo
Rule 44    expr -> termo
Rule 45    termo -> termo TIMES fator
Rule 46    termo -> termo DIVIDE fator
Rule 47    termo -> fator
Rule 48    fator -> NUM
Rule 49    fator -> ID
Rule 50    fator -> LPAREN expr RPAREN
Rule 51    fator -> TRUE
Rule 52    fator -> FALSE

Terminals, with rules where they appear

AND                  : 39
ASPAS                : 21 21
ASSIGN               : 20 21
BREAK                : 32
COMMA                : 6
DECLARE_FLOAT        : 3
DECLARE_INT          : 2
DECLARE_TEXTO        : 4
DIVIDE               : 46
DO                   : 28 29 30 31
DOT                  : 2 3 4 17 18 19 20 21 28 29 30 31 32
ELSE                 : 23
EQ                   : 38
ESCREVA              : 18 19
FALSE                : 27 31 52
FIMPROG              : 1
GE                   : 36
GT                   : 34
ID                   : 5 6 17 19 20 21 21 49
IF                   : 22 23
LBRACE               : 22 23 23 24 25 26 27 28 29 30 31
LE                   : 35
LEIA                 : 17
LPAREN               : 17 18 19 22 23 24 25 26 27 28 29 30 31 50
LT                   : 33
MINUS                : 43
NE                   : 37
NOT                  : 41
NUM                  : 25 29 48
OR                   : 40
PLUS                 : 42
PROGRAMA             : 1
RBRACE               : 22 23 23 24 25 26 27 28 29 30 31
RPAREN               : 17 18 19 22 23 24 25 26 27 28 29 30 31 50
TEXT                 : 18
TIMES                : 45
TRUE                 : 26 30 51
WHILE                : 24 25 26 27 28 29 30 31
error                : 

Nonterminals, with rules where they appear

bloco                : 1 8 22 23 23 24 25 26 27 28 29 30 31
cmd_break            : 14
cmd_do_while         : 15
cmd_escrita          : 10
cmd_expr             : 12
cmd_if               : 11
cmd_leitura          : 9
cmd_while            : 13
comando              : 7 8
declara              : 1 16
expr                 : 20 22 22 23 23 24 24 28 28 42 43 50
fator                : 45 46 47
lista_ids            : 2 3 4 6
op_rel               : 22 23 24 28
program              : 0
termo                : 42 43 44 45 46

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAMA declara bloco FIMPROG

    PROGRAMA        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAMA . declara bloco FIMPROG
    (2) declara -> . DECLARE_INT lista_ids DOT
    (3) declara -> . DECLARE_FLOAT lista_ids DOT
    (4) declara -> . DECLARE_TEXTO lista_ids DOT

    DECLARE_INT     shift and go to state 4
    DECLARE_FLOAT   shift and go to state 5
    DECLARE_TEXTO   shift and go to state 6

    declara                        shift and go to state 3

state 3

    (1) program -> PROGRAMA declara . bloco FIMPROG
    (7) bloco -> . comando
    (8) bloco -> . bloco comando
    (9) comando -> . cmd_leitura
    (10) comando -> . cmd_escrita
    (11) comando -> . cmd_if
    (12) comando -> . cmd_expr
    (13) comando -> . cmd_while
    (14) comando -> . cmd_break
    (15) comando -> . cmd_do_while
    (16) comando -> . declara
    (17) cmd_leitura -> . LEIA LPAREN ID RPAREN DOT
    (18) cmd_escrita -> . ESCREVA LPAREN TEXT RPAREN DOT
    (19) cmd_escrita -> . ESCREVA LPAREN ID RPAREN DOT
    (22) cmd_if -> . IF LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE
    (23) cmd_if -> . IF LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE ELSE LBRACE bloco RBRACE
    (20) cmd_expr -> . ID ASSIGN expr DOT
    (21) cmd_expr -> . ID ASSIGN ASPAS ID ASPAS DOT
    (24) cmd_while -> . WHILE LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE
    (25) cmd_while -> . WHILE LPAREN NUM RPAREN LBRACE bloco RBRACE
    (26) cmd_while -> . WHILE LPAREN TRUE RPAREN LBRACE bloco RBRACE
    (27) cmd_while -> . WHILE LPAREN FALSE RPAREN LBRACE bloco RBRACE
    (32) cmd_break -> . BREAK DOT
    (28) cmd_do_while -> . DO LBRACE bloco RBRACE WHILE LPAREN expr op_rel expr RPAREN DOT
    (29) cmd_do_while -> . DO LBRACE bloco RBRACE WHILE LPAREN NUM RPAREN DOT
    (30) cmd_do_while -> . DO LBRACE bloco RBRACE WHILE LPAREN TRUE RPAREN DOT
    (31) cmd_do_while -> . DO LBRACE bloco RBRACE WHILE LPAREN FALSE RPAREN DOT
    (2) declara -> . DECLARE_INT lista_ids DOT
    (3) declara -> . DECLARE_FLOAT lista_ids DOT
    (4) declara -> . DECLARE_TEXTO lista_ids DOT

    LEIA            shift and go to state 17
    ESCREVA         shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18
    WHILE           shift and go to state 21
    BREAK           shift and go to state 22
    DO              shift and go to state 23
    DECLARE_INT     shift and go to state 4
    DECLARE_FLOAT   shift and go to state 5
    DECLARE_TEXTO   shift and go to state 6

    declara                        shift and go to state 7
    bloco                          shift and go to state 8
    comando                        shift and go to state 9
    cmd_leitura                    shift and go to state 10
    cmd_escrita                    shift and go to state 11
    cmd_if                         shift and go to state 12
    cmd_expr                       shift and go to state 13
    cmd_while                      shift and go to state 14
    cmd_break                      shift and go to state 15
    cmd_do_while                   shift and go to state 16

state 4

    (2) declara -> DECLARE_INT . lista_ids DOT
    (5) lista_ids -> . ID
    (6) lista_ids -> . lista_ids COMMA ID

    ID              shift and go to state 25

    lista_ids                      shift and go to state 24

state 5

    (3) declara -> DECLARE_FLOAT . lista_ids DOT
    (5) lista_ids -> . ID
    (6) lista_ids -> . lista_ids COMMA ID

    ID              shift and go to state 25

    lista_ids                      shift and go to state 26

state 6

    (4) declara -> DECLARE_TEXTO . lista_ids DOT
    (5) lista_ids -> . ID
    (6) lista_ids -> . lista_ids COMMA ID

    ID              shift and go to state 25

    lista_ids                      shift and go to state 27

state 7

    (16) comando -> declara .

    FIMPROG         reduce using rule 16 (comando -> declara .)
    LEIA            reduce using rule 16 (comando -> declara .)
    ESCREVA         reduce using rule 16 (comando -> declara .)
    IF              reduce using rule 16 (comando -> declara .)
    ID              reduce using rule 16 (comando -> declara .)
    WHILE           reduce using rule 16 (comando -> declara .)
    BREAK           reduce using rule 16 (comando -> declara .)
    DO              reduce using rule 16 (comando -> declara .)
    DECLARE_INT     reduce using rule 16 (comando -> declara .)
    DECLARE_FLOAT   reduce using rule 16 (comando -> declara .)
    DECLARE_TEXTO   reduce using rule 16 (comando -> declara .)
    RBRACE          reduce using rule 16 (comando -> declara .)


state 8

    (1) program -> PROGRAMA declara bloco . FIMPROG
    (8) bloco -> bloco . comando
    (9) comando -> . cmd_leitura
    (10) comando -> . cmd_escrita
    (11) comando -> . cmd_if
    (12) comando -> . cmd_expr
    (13) comando -> . cmd_while
    (14) comando -> . cmd_break
    (15) comando -> . cmd_do_while
    (16) comando -> . declara
    (17) cmd_leitura -> . LEIA LPAREN ID RPAREN DOT
    (18) cmd_escrita -> . ESCREVA LPAREN TEXT RPAREN DOT
    (19) cmd_escrita -> . ESCREVA LPAREN ID RPAREN DOT
    (22) cmd_if -> . IF LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE
    (23) cmd_if -> . IF LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE ELSE LBRACE bloco RBRACE
    (20) cmd_expr -> . ID ASSIGN expr DOT
    (21) cmd_expr -> . ID ASSIGN ASPAS ID ASPAS DOT
    (24) cmd_while -> . WHILE LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE
    (25) cmd_while -> . WHILE LPAREN NUM RPAREN LBRACE bloco RBRACE
    (26) cmd_while -> . WHILE LPAREN TRUE RPAREN LBRACE bloco RBRACE
    (27) cmd_while -> . WHILE LPAREN FALSE RPAREN LBRACE bloco RBRACE
    (32) cmd_break -> . BREAK DOT
    (28) cmd_do_while -> . DO LBRACE bloco RBRACE WHILE LPAREN expr op_rel expr RPAREN DOT
    (29) cmd_do_while -> . DO LBRACE bloco RBRACE WHILE LPAREN NUM RPAREN DOT
    (30) cmd_do_while -> . DO LBRACE bloco RBRACE WHILE LPAREN TRUE RPAREN DOT
    (31) cmd_do_while -> . DO LBRACE bloco RBRACE WHILE LPAREN FALSE RPAREN DOT
    (2) declara -> . DECLARE_INT lista_ids DOT
    (3) declara -> . DECLARE_FLOAT lista_ids DOT
    (4) declara -> . DECLARE_TEXTO lista_ids DOT

    FIMPROG         shift and go to state 28
    LEIA            shift and go to state 17
    ESCREVA         shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18
    WHILE           shift and go to state 21
    BREAK           shift and go to state 22
    DO              shift and go to state 23
    DECLARE_INT     shift and go to state 4
    DECLARE_FLOAT   shift and go to state 5
    DECLARE_TEXTO   shift and go to state 6

    declara                        shift and go to state 7
    comando                        shift and go to state 29
    cmd_leitura                    shift and go to state 10
    cmd_escrita                    shift and go to state 11
    cmd_if                         shift and go to state 12
    cmd_expr                       shift and go to state 13
    cmd_while                      shift and go to state 14
    cmd_break                      shift and go to state 15
    cmd_do_while                   shift and go to state 16

state 9

    (7) bloco -> comando .

    FIMPROG         reduce using rule 7 (bloco -> comando .)
    LEIA            reduce using rule 7 (bloco -> comando .)
    ESCREVA         reduce using rule 7 (bloco -> comando .)
    IF              reduce using rule 7 (bloco -> comando .)
    ID              reduce using rule 7 (bloco -> comando .)
    WHILE           reduce using rule 7 (bloco -> comando .)
    BREAK           reduce using rule 7 (bloco -> comando .)
    DO              reduce using rule 7 (bloco -> comando .)
    DECLARE_INT     reduce using rule 7 (bloco -> comando .)
    DECLARE_FLOAT   reduce using rule 7 (bloco -> comando .)
    DECLARE_TEXTO   reduce using rule 7 (bloco -> comando .)
    RBRACE          reduce using rule 7 (bloco -> comando .)


state 10

    (9) comando -> cmd_leitura .

    FIMPROG         reduce using rule 9 (comando -> cmd_leitura .)
    LEIA            reduce using rule 9 (comando -> cmd_leitura .)
    ESCREVA         reduce using rule 9 (comando -> cmd_leitura .)
    IF              reduce using rule 9 (comando -> cmd_leitura .)
    ID              reduce using rule 9 (comando -> cmd_leitura .)
    WHILE           reduce using rule 9 (comando -> cmd_leitura .)
    BREAK           reduce using rule 9 (comando -> cmd_leitura .)
    DO              reduce using rule 9 (comando -> cmd_leitura .)
    DECLARE_INT     reduce using rule 9 (comando -> cmd_leitura .)
    DECLARE_FLOAT   reduce using rule 9 (comando -> cmd_leitura .)
    DECLARE_TEXTO   reduce using rule 9 (comando -> cmd_leitura .)
    RBRACE          reduce using rule 9 (comando -> cmd_leitura .)


state 11

    (10) comando -> cmd_escrita .

    FIMPROG         reduce using rule 10 (comando -> cmd_escrita .)
    LEIA            reduce using rule 10 (comando -> cmd_escrita .)
    ESCREVA         reduce using rule 10 (comando -> cmd_escrita .)
    IF              reduce using rule 10 (comando -> cmd_escrita .)
    ID              reduce using rule 10 (comando -> cmd_escrita .)
    WHILE           reduce using rule 10 (comando -> cmd_escrita .)
    BREAK           reduce using rule 10 (comando -> cmd_escrita .)
    DO              reduce using rule 10 (comando -> cmd_escrita .)
    DECLARE_INT     reduce using rule 10 (comando -> cmd_escrita .)
    DECLARE_FLOAT   reduce using rule 10 (comando -> cmd_escrita .)
    DECLARE_TEXTO   reduce using rule 10 (comando -> cmd_escrita .)
    RBRACE          reduce using rule 10 (comando -> cmd_escrita .)


state 12

    (11) comando -> cmd_if .

    FIMPROG         reduce using rule 11 (comando -> cmd_if .)
    LEIA            reduce using rule 11 (comando -> cmd_if .)
    ESCREVA         reduce using rule 11 (comando -> cmd_if .)
    IF              reduce using rule 11 (comando -> cmd_if .)
    ID              reduce using rule 11 (comando -> cmd_if .)
    WHILE           reduce using rule 11 (comando -> cmd_if .)
    BREAK           reduce using rule 11 (comando -> cmd_if .)
    DO              reduce using rule 11 (comando -> cmd_if .)
    DECLARE_INT     reduce using rule 11 (comando -> cmd_if .)
    DECLARE_FLOAT   reduce using rule 11 (comando -> cmd_if .)
    DECLARE_TEXTO   reduce using rule 11 (comando -> cmd_if .)
    RBRACE          reduce using rule 11 (comando -> cmd_if .)


state 13

    (12) comando -> cmd_expr .

    FIMPROG         reduce using rule 12 (comando -> cmd_expr .)
    LEIA            reduce using rule 12 (comando -> cmd_expr .)
    ESCREVA         reduce using rule 12 (comando -> cmd_expr .)
    IF              reduce using rule 12 (comando -> cmd_expr .)
    ID              reduce using rule 12 (comando -> cmd_expr .)
    WHILE           reduce using rule 12 (comando -> cmd_expr .)
    BREAK           reduce using rule 12 (comando -> cmd_expr .)
    DO              reduce using rule 12 (comando -> cmd_expr .)
    DECLARE_INT     reduce using rule 12 (comando -> cmd_expr .)
    DECLARE_FLOAT   reduce using rule 12 (comando -> cmd_expr .)
    DECLARE_TEXTO   reduce using rule 12 (comando -> cmd_expr .)
    RBRACE          reduce using rule 12 (comando -> cmd_expr .)


state 14

    (13) comando -> cmd_while .

    FIMPROG         reduce using rule 13 (comando -> cmd_while .)
    LEIA            reduce using rule 13 (comando -> cmd_while .)
    ESCREVA         reduce using rule 13 (comando -> cmd_while .)
    IF              reduce using rule 13 (comando -> cmd_while .)
    ID              reduce using rule 13 (comando -> cmd_while .)
    WHILE           reduce using rule 13 (comando -> cmd_while .)
    BREAK           reduce using rule 13 (comando -> cmd_while .)
    DO              reduce using rule 13 (comando -> cmd_while .)
    DECLARE_INT     reduce using rule 13 (comando -> cmd_while .)
    DECLARE_FLOAT   reduce using rule 13 (comando -> cmd_while .)
    DECLARE_TEXTO   reduce using rule 13 (comando -> cmd_while .)
    RBRACE          reduce using rule 13 (comando -> cmd_while .)


state 15

    (14) comando -> cmd_break .

    FIMPROG         reduce using rule 14 (comando -> cmd_break .)
    LEIA            reduce using rule 14 (comando -> cmd_break .)
    ESCREVA         reduce using rule 14 (comando -> cmd_break .)
    IF              reduce using rule 14 (comando -> cmd_break .)
    ID              reduce using rule 14 (comando -> cmd_break .)
    WHILE           reduce using rule 14 (comando -> cmd_break .)
    BREAK           reduce using rule 14 (comando -> cmd_break .)
    DO              reduce using rule 14 (comando -> cmd_break .)
    DECLARE_INT     reduce using rule 14 (comando -> cmd_break .)
    DECLARE_FLOAT   reduce using rule 14 (comando -> cmd_break .)
    DECLARE_TEXTO   reduce using rule 14 (comando -> cmd_break .)
    RBRACE          reduce using rule 14 (comando -> cmd_break .)


state 16

    (15) comando -> cmd_do_while .

    FIMPROG         reduce using rule 15 (comando -> cmd_do_while .)
    LEIA            reduce using rule 15 (comando -> cmd_do_while .)
    ESCREVA         reduce using rule 15 (comando -> cmd_do_while .)
    IF              reduce using rule 15 (comando -> cmd_do_while .)
    ID              reduce using rule 15 (comando -> cmd_do_while .)
    WHILE           reduce using rule 15 (comando -> cmd_do_while .)
    BREAK           reduce using rule 15 (comando -> cmd_do_while .)
    DO              reduce using rule 15 (comando -> cmd_do_while .)
    DECLARE_INT     reduce using rule 15 (comando -> cmd_do_while .)
    DECLARE_FLOAT   reduce using rule 15 (comando -> cmd_do_while .)
    DECLARE_TEXTO   reduce using rule 15 (comando -> cmd_do_while .)
    RBRACE          reduce using rule 15 (comando -> cmd_do_while .)


state 17

    (17) cmd_leitura -> LEIA . LPAREN ID RPAREN DOT

    LPAREN          shift and go to state 30


state 18

    (20) cmd_expr -> ID . ASSIGN expr DOT
    (21) cmd_expr -> ID . ASSIGN ASPAS ID ASPAS DOT

    ASSIGN          shift and go to state 31


state 19

    (18) cmd_escrita -> ESCREVA . LPAREN TEXT RPAREN DOT
    (19) cmd_escrita -> ESCREVA . LPAREN ID RPAREN DOT

    LPAREN          shift and go to state 32


state 20

    (22) cmd_if -> IF . LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE
    (23) cmd_if -> IF . LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE ELSE LBRACE bloco RBRACE

    LPAREN          shift and go to state 33


state 21

    (24) cmd_while -> WHILE . LPAREN expr op_rel expr RPAREN LBRACE bloco RBRACE
    (25) cmd_while -> WHILE . LPAREN NUM RPAREN LBRACE bloco RBRACE
    (26) cmd_while -> WHILE . LPAREN TRUE RPAREN LBRACE bloco RBRACE
    (27) cmd_while -> WHILE . LPAREN FALSE RPAREN LBRACE bloco RBRACE

    LPAREN          shift and go to state 34


state 22

    (32) cmd_break -> BREAK . DOT

    DOT             shift and go to state 35


state 23

    (28) cmd_do_while -> DO . LBRACE bloco RBRACE WHILE LPAREN expr op_rel expr RPAREN DOT
    (29) cmd_do_while -> DO . LBRACE bloco RBRACE WHILE LPAREN NUM RPAREN DOT
    (30) cmd_do_while -> DO . LBRACE bloco RBRACE WHILE LPAREN TRUE RPAREN DOT
    (31) cmd_do_while -> DO . LBRACE bloco RBRACE WHILE LPAREN FALSE RPAREN DOT

    LBRACE          shift and go to state 36


state 24

    (2) declara -> DECLARE_INT lista_ids . DOT
    (6) lista_ids -> lista_ids . COMMA ID

    DOT             shift and go to state 37
    COMMA           shift and go to state 38


state 25

    (5) lista_ids -> ID .

    DOT             reduce using rule 5 (lista_ids -> ID .)
    COMMA           reduce using rule 5 (lista_ids -> ID .)


state 26

    (3) declara -> DECLARE_FLOAT lista_ids . DOT
    (6) lista_ids -> lista_ids . COMMA ID

    DOT             shift and go to state 39
    COMMA           shift and go to state 38


state 27

    (4) declara -> DECLARE_TEXTO lista_ids . DOT
    (6) lista_ids -> lista_ids . COMMA ID

    DOT             shift and go to state 40
    COMMA           shift and go to state 38


state 28

    (1) program -> PROGRAMA declara bloco FIMPROG .

    $end            reduce using rule 1 (program -> PROGRAMA declara bloco FIMPROG .)


state 29

    (8) bloco -> bloco comando .

    FIMPROG         reduce using rule 8 (bloco -> bloco comando .)
    LEIA            reduce using rule 8 (bloco -> bloco comando .)
    ESCREVA         reduce using rule 8 (bloco -> bloco comando .)
    IF              reduce using rule 8 (bloco -> bloco comando .)
    ID              reduce using rule 8 (bloco -> bloco comando .)
    WHILE           reduce using rule 8 (bloco -> bloco comando .)
    BREAK           reduce using rule 8 (bloco -> bloco comando .)
    DO              reduce using rule 8 (bloco -> bloco comando .)
    DECLARE_INT     reduce using rule 8 (bloco -> bloco comando .)
    DECLARE_FLOAT   reduce using rule 8 (bloco -> bloco comando .)
    DECLARE_TEXTO   reduce using rule 8 (bloco -> bloco comando .)
    RBRACE          reduce using rule 8 (bloco -> bloco comando .)


state 30

    (17) cmd_leitura -> LEIA LPAREN . ID RPAREN DOT

    ID              shift and go to state 41


state 31

    (20) cmd_expr -> ID ASSIGN . expr DOT
    (21) cmd_expr -> ID ASSIGN . ASPAS ID ASPAS DOT
    (42) expr -> . expr PLUS termo
    (43) expr -> . expr MINUS termo
    (44) expr -> . termo
    (45) termo -> . termo TIMES fator
    (46) termo -> . termo DIVIDE fator
    (47) termo -> . fator
    (48) fator -> . NUM
    (49) fator -> . ID
    (50) fator -> . LPAREN expr RPAREN
    (51) fator -> . TRUE
    (52) fator -> . FALSE

    ASPAS           shift and go to state 44
    NUM             shift and go to state 47
    ID              shift and go to state 42
    LPAREN          shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    expr                           shift and go to state 43
    termo                          shift and go to state 45
    fator                          shift and go to state 46

state 32

    (18) cmd_escrita -> ESCREVA LPAREN . TEXT RPAREN DOT
    (19) cmd_escrita -> ESCREVA LPAREN . ID RPAREN DOT

    TEXT            shift and go to state 51
    ID              shift and go to state 52


state 33

    (22) cmd_if -> IF LPAREN . expr op_rel expr RPAREN LBRACE bloco RBRACE
    (23) cmd_if -> IF LPAREN . expr op_rel expr RPAREN LBRACE bloco RBRACE ELSE LBRACE bloco RBRACE
    (42) expr -> . expr PLUS termo
    (43) expr -> . expr MINUS termo
    (44) expr -> . termo
    (45) termo -> . termo TIMES fator
    (46) termo -> . termo DIVIDE fator
    (47) termo -> . fator
    (48) fator -> . NUM
    (49) fator -> . ID
    (50) fator -> . LPAREN expr RPAREN
    (51) fator -> . TRUE
    (52) fator -> . FALSE

    NUM             shift and go to state 47
    ID              shift and go to state 42
    LPAREN          shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    expr                           shift and go to state 53
    termo                          shift and go to state 45
    fator                          shift and go to state 46

state 34

    (24) cmd_while -> WHILE LPAREN . expr op_rel expr RPAREN LBRACE bloco RBRACE
    (25) cmd_while -> WHILE LPAREN . NUM RPAREN LBRACE bloco RBRACE
    (26) cmd_while -> WHILE LPAREN . TRUE RPAREN LBRACE bloco RBRACE
    (27) cmd_while -> WHILE LPAREN . FALSE RPAREN LBRACE bloco RBRACE
    (42) expr -> . expr PLUS termo
    (43) expr -> . expr MINUS termo
    (44) expr -> . termo
    (45) termo -> . termo TIMES fator
    (46) termo -> . termo DIVIDE fator
    (47) termo -> . fator
    (48) fator -> . NUM
    (49) fator -> . ID
    (50) fator -> . LPAREN expr RPAREN
    (51) fator -> . TRUE
    (52) fator -> . FALSE

    NUM             shift and go to state 55
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    ID              shift and go to state 42
    LPAREN          shift and go to state 48
